--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>jamBack</title>
+    <link rel="shortcut icon" href="img/jamback.avif" type="jamback">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,10 +15,43 @@
                 <li><a href="#"></a>jamBack</li>
                 <li><a href=""></a>idioma</li>
                 <li><a href=""></a>ayuda</li>
-                <li><a href=""></a>inicio sesion</li>
+                <div class="formulario">
+                    <li>inicio sesion</li>
+                    <form action="post">
+                        <div class="username"> 
+                    <input type="text" required>
+                    <label for="nombre de usuario"></label>
+                        </div>
+                <div class="contraseña">
+                    <input type="password"required>
+                    <label for="Contraseña"></label>
+                </div>
+                <div class="recordar">¿Olvido su contraseña?</div>
+            </ul>
+        </nav>
+    <img src="img/icono-de-la-búsqueda-lupa-del-vector-o-muestra-131036619.jpg"> 
+    <img src="img/images.png" alt="carrito de compras">
+    </header>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li>Modelo</li>
+                <li>Deportes</li>
+                <li>Obsside</li>
+                <li>Jordan</li>
             </ul>
         </nav>
     </header>
-    
 </body>
 </html>
