le añadi inicio sesion

--- a/index.html
+++ b/index.html
@@ -12,25 +12,14 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#"></a>jamBack</li>
-                <li><a href=""></a>idioma</li>
-                <li><a href=""></a>ayuda</li>
-                <div class="formulario">
-                    <li>inicio sesion</li>
-                    <form action="post">
-                        <div class="username"> 
-                    <input type="text" required>
-                    <label for="nombre de usuario"></label>
-                        </div>
-                <div class="contraseña">
-                    <input type="password"required>
-                    <label for="Contraseña"></label>
-                </div>
-                <div class="recordar">¿Olvido su contraseña?</div>
+                <li><a href="#"></a>JamBack</li>
+                <li><a href=""></a>Idioma</li>
+                <li><a href=""></a>Ayuda</li>
+                <li><a href=""></a>Inicio sesion</li>
             </ul>
         </nav>
-    <img src="img/icono-de-la-búsqueda-lupa-del-vector-o-muestra-131036619.jpg"> 
-    <img src="img/images.png" alt="carrito de compras">
+    <img src="img/icono-de-la-búsqueda-lupa-del-vector-o-muestra-131036619.jpg" class="img1" alt=""> 
+    <img src="img/images.png" class="img2" alt="">
     </header>
 </body>
 </html>
@@ -53,5 +42,36 @@
             </ul>
         </nav>
     </header>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <ul>
+        <div class="formulario">
+            <h1>Inicio sesion</h1>
+            <form method="post">
+                <div class="Username">
+                    <input type="text" required>
+                    <label>Nombre de usuarioo</label>
+                </div>
+                <div class="Contraseña">
+                    <input type="password" required>
+                    <label>Contraseña</label>
+                </div>
+                <div class="¿Olviso su contraseña?"></div>
+                <input type="submit" value="Iniciar">
+                <div class="Registrarse">
+                    quiero hacer el <a href="#">registro</a>
+                </div>
+            </form>
+        </div>
+    </ul>
 </body>
 </html>
