cambie el color a azul

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jamBack</title>
-    <link rel="shortcut icon" href="img/jamback.avif" type="jamback">
+    <link rel="shortcut icon" href="img/jamback.avif" type="Jamback">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -35,10 +35,10 @@
     <header>
         <nav>
             <ul>
-                <li>Modelo</li>
-                <li>Deportes</li>
-                <li>Obsside</li>
-                <li>Jordan</li>
+                <li class="modelo">Modelo</li>
+                <li class="Deporte">Deportes</li>
+                <li class="Obsside">Obsside</li>
+                <li class="Jordan">Jordan</li>
             </ul>
         </nav>
     </header>
