--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     <title>jamBack</title>
     <link rel="shortcut icon" href="img/jamback.avif" type="Jamback">
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background-color: lavender;
+        }
+    </style>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#"></a>JamBack</li>
-                <li><a href=""></a>Idioma</li>
-                <li><a href=""></a>Ayuda</li>
-                <li><a href=""></a>Inicio sesion</li>
+                <div class="titulo"><a href="#"></a>JamBack</div>
+                <div class="idioma"><a href=""></a>Idioma</div>
+                <li>"ayuda"><a href=""></a>Ayuda</div>
+                <li>"iniciosesion"><a href=""></a>Inicio sesion</li>
             </ul>
         </nav>
     <img src="img/icono-de-la-búsqueda-lupa-del-vector-o-muestra-131036619.jpg" class="img1" alt=""> 
