--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body {
-            background-color: lavender;
+            background-color: rgb(27, 182, 206);
         }
     </style>
 </head>
@@ -17,14 +17,20 @@
     <header>
         <nav>
             <ul>
-                <div class="titulo"><a href="#"></a>JamBack</div>
-                <div class="idioma"><a href=""></a>Idioma</div>
-                <li>"ayuda"><a href=""></a>Ayuda</div>
-                <li>"iniciosesion"><a href=""></a>Inicio sesion</li>
+                <li class="jamback"><a href="#"></a>JamBack</li>
+                <li class="idioma"><a href=""></a>Idioma</li>
+                <li class="ayuda"><a href=""></a>Ayuda</li>
+                <li class="iniciosesion"><a href="#"></a>Inicio sesion</li>
             </ul>
         </nav>
-    <img src="img/icono-de-la-búsqueda-lupa-del-vector-o-muestra-131036619.jpg" class="img1" alt=""> 
-    <img src="img/images.png" class="img2" alt="">
+        <form>
+        <img src="img/icono-de-la-búsqueda-lupa-del-vector-o-muestra-131036619.jpg" class="img1" alt=""> 
+        <img src="img/images.png" class="img2" alt="">
+        <form class="seach-box">
+            <input class="buscador" type="text" list="lista" placeholder="Buscador"/>
+            <datalist id="lista">
+                <option value="jordan"></option>
+                <option value="AIR jordan XXXI"></option>
     </header>
 </body>
 </html>
@@ -40,43 +46,28 @@
     <header>
         <nav>
             <ul>
-                <li class="modelo">Modelo</li>
-                <li class="Deporte">Deportes</li>
-                <li class="Obsside">Obsside</li>
-                <li class="Jordan">Jordan</li>
-            </ul>
+                <li class="modelo" style="--clr:#00ade1">
+                        <a href="#" data-text="Modelo">Modelo</a>
+                </li>
+                <li class="deporte" style="--clr:#ff6492">
+                        <a href="#" data-text="Deporte">Deporte</a>
+                </li>
+                <li class="obsside" style="--clr:#ffdd1c">
+                    <a href="# " data-text="Obsside">Obsside</a>
+                </li>
+                <li class="jordan" style="--clr:#00dc82">
+                    <a href="#" data-text="Jordan">Jordan</a>
+                </li>
+                </ul>
         </nav>
+        <div class="waua" id="cuadrado">
+            <h3>Jordan 34 Low Guo Ailun</h3>
+        </div>
+        <img class="ulas" src="img/zapatillas-nike-more-uptempo-og-negra-removebg-preview.png">
+        <div class="cud" id="cuad"></div>
+        <img class="ftco" src="img/jordan+34+low-removebg-preview.png">
+        <div class="bnbn" id="cuadr"></div>
+        <img class="fts" src="img/zapatilla-jordan-1-mid-verde-amarilla-removebg-preview (1).png" >
     </header>
 </body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <ul>
-        <div class="formulario">
-            <h1>Inicio sesion</h1>
-            <form method="post">
-                <div class="Username">
-                    <input type="text" required>
-                    <label>Nombre de usuarioo</label>
-                </div>
-                <div class="Contraseña">
-                    <input type="password" required>
-                    <label>Contraseña</label>
-                </div>
-                <div class="¿Olviso su contraseña?"></div>
-                <input type="submit" value="Iniciar">
-                <div class="Registrarse">
-                    quiero hacer el <a href="#">registro</a>
-                </div>
-            </form>
-        </div>
-    </ul>
-</body>
-</html>
+
