--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </ul>
         </nav>
         <form>
-        <img src="img/icono-de-la-búsqueda-lupa-del-vector-o-muestra-131036619.jpg" class="img1" alt=""> 
-        <img src="img/images.png" class="img2" alt="">
+        <img src="img/lupa.png" class="img1" alt=""> 
+        <img src="img/images-removebg-preview.png" class="img2" alt="">
         <form class="seach-box">
             <input class="buscador" type="text" list="lista" placeholder="Buscador"/>
             <datalist id="lista">
@@ -62,12 +62,16 @@
         </nav>
         <div class="waua" id="cuadrado">
             <h3>Jordan 34 Low Guo Ailun</h3>
+            <p>Mejor oferta</p>
+            <h2><sup>$</sup>87<small>.990</small></h2>
+            <a href="#">Comprar ahora</a>
         </div>
-        <img class="ulas" src="img/zapatillas-nike-more-uptempo-og-negra-removebg-preview.png">
+        <img class="ulas" src="img/zapatilla-jordan-1-mid-verde-amarilla-removebg-preview (1).png">
         <div class="cud" id="cuad"></div>
         <img class="ftco" src="img/jordan+34+low-removebg-preview.png">
-        <div class="bnbn" id="cuadr"></div>
-        <img class="fts" src="img/zapatilla-jordan-1-mid-verde-amarilla-removebg-preview (1).png" >
+        
+        <img class="fts" src="img/zapatilla-jordan-1-mid-verde-amarilla-removebg-preview (1).png">
+
     </header>
 </body>
 
