--- a/index2.html
+++ b/index2.html
@@ -16,11 +16,21 @@
 
         <a href="#" class="logo">Jamback<span>.</span></a>
         <nav class="navbar">
-            <a href="#hombe">Casa</a>
+            <a href="#home">Casa</a>
             <a href="#about">acerca de</a>
             <a href="#products">productos</a>
             <a href="#review">review</a>
             <a href="#contact">contact</a>
+            <div class="centrar"> 
+                <div class="entrada_cont">
+                    <input type="text" placeholder="hola">
+                    <div class="cont1">
+                        <div class="cont2">
+                            <img src="img/lupa.png" width="25px">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </nav>
 
         <div class="icons">
