--- a/iindex.html/index.html
+++ b/iindex.html/index.html
@@ -1,126 +1,77 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="estilo.css">
-    <script src="app.js" async></script>
-    <title>jamback</title>
+    <title>jamBack</title>
+    <link rel="shortcut icon" href="img/jamback.avif" type="Jamback">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background-color: rgb(27, 182, 206);
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>jamBack.store</h1>
+        <nav>
+            <ul>
+                <li class="jamback"><a href="#"></a>JamBack</li>
+                <li class="idioma"><a href=""></a>Idioma</li>
+                <li class="ayuda"><a href=""></a>Ayuda</li>
+                <li class="iniciosesion"><a href="#"></a>Inicio sesion</li>
+            </ul>
+        </nav>
+        <form>
+        <img src="img/lupa.png" class="img1" alt=""> 
+        <img src="img/images-removebg-preview.png" class="img2" alt="">
+        <form class="seach-box">
+            <input class="buscador" type="text" list="lista" placeholder="Buscador"/>
+            <datalist id="lista">
+                <option value="jordan"></option>
+                <option value="AIR jordan XXXI"></option>
     </header>
-    <section class="contenedor">
-        <!-- Contenedor de elementos -->
-        <div class="contenedor-items">
-            <div class="item">
-                <span class="titulo-item">nike lebron james</span>
-                <img src="img/boxengasse.png" alt="" class="img-item">
-                <span class="precio-item">$150.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">jordan 1</span>
-                <img src="img/englishrose.png" alt="" class="img-item">
-                <span class="precio-item">$250.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item"></span>
-                <img src="img/knocknap.png" alt="" class="img-item">
-                <span class="precio-item">$35.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">La Night</span>
-                <img src="img/lanight.png" alt="" class="img-item">
-                <span class="precio-item">$18.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Silver All</span>
-                <img src="img/silverall.png" alt="" class="img-item">
-                <span class="precio-item">$32.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Skin Glam</span>
-                <img src="img/skinglam.png" alt="" class="img-item">
-                <span class="precio-item">$18.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Midimix</span>
-                <img src="img/midimix.png" alt="" class="img-item">
-                <span class="precio-item">$54.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Sir Blue</span>
-                <img src="img/sirblue.png" alt="" class="img-item">
-                <span class="precio-item">$32.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Middlesteel</span>
-                <img src="img/middlesteel.png" alt="" class="img-item">
-                <span class="precio-item">$42.800</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-        </div>
-        <!-- Carrito de Compras -->
-        <div class="carrito" id="carrito">
-            <div class="header-carrito">
-                <h2>Tu Carrito</h2>
-            </div>
-
-            <div class="carrito-items">
-                <!-- 
-                <div class="carrito-item">
-                    <img src="img/boxengasse.png" width="80px" alt="">
-                    <div class="carrito-item-detalles">
-                        <span class="carrito-item-titulo">Box Engasse</span>
-                        <div class="selector-cantidad">
-                            <i class="fa-solid fa-minus restar-cantidad"></i>
-                            <input type="text" value="1" class="carrito-item-cantidad" disabled>
-                            <i class="fa-solid fa-plus sumar-cantidad"></i>
-                        </div>
-                        <span class="carrito-item-precio">$15.000,00</span>
-                    </div>
-                   <span class="btn-eliminar">
-                        <i class="fa-solid fa-trash"></i>
-                   </span>
-                </div>
-                <div class="carrito-item">
-                    <img src="img/skinglam.png" width="80px" alt="">
-                    <div class="carrito-item-detalles">
-                        <span class="carrito-item-titulo">Skin Glam</span>
-                        <div class="selector-cantidad">
-                            <i class="fa-solid fa-minus restar-cantidad"></i>
-                            <input type="text" value="3" class="carrito-item-cantidad" disabled>
-                            <i class="fa-solid fa-plus sumar-cantidad"></i>
-                        </div>
-                        <span class="carrito-item-precio">$18.000,00</span>
-                    </div>
-                   <button class="btn-eliminar">
-                        <i class="fa-solid fa-trash"></i>
-                   </button>
-                </div>
-                 -->
-            </div>
-            <div class="carrito-total">
-                <div class="fila">
-                    <strong>Tu Total</strong>
-                    <span class="carrito-precio-total">
-                        $120.000,00
-                    </span>
-                </div>
-                <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i> </button>
-            </div>
-        </div>
-    </section>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li class="modelo" style="--clr:#00ade1">
+                        <a href="#" data-text="Modelo">Modelo</a>
+                </li>
+                <li class="deporte" style="--clr:#ff6492">
+                        <a href="#" data-text="Deporte">Deporte</a>
+                </li>
+                <li class="obsside" style="--clr:#ffdd1c">
+                    <a href="# " data-text="Obsside">Obsside</a>
+                </li>
+                <li class="jordan" style="--clr:#00dc82">
+                    <a href="#" data-text="Jordan">Jordan</a>
+                </li>
+                </ul>
+        </nav>
+        <div class="waua" id="cuadrado">
+            <h3>Jordan 34 Low Guo Ailun</h3>
+            <p>Mejor oferta</p>
+            <h2><sup>$</sup>87<small>.990</small></h2>
+            <a href="#">Comprar ahora</a>
+        </div>
+        <img class="ulas" src="img/zapatilla-jordan-1-mid-verde-amarilla-removebg-preview (1).png">
+        <div class="cud" id="cuad"></div>
+        <img class="ftco" src="img/jordan+34+low-removebg-preview.png">
+        
+        <img class="fts" src="img/zapatilla-jordan-1-mid-verde-amarilla-removebg-preview (1).png">
+
+    </header>
+</body>
+
