--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="img/dfghj.png" type="logo">
     <title>Inicio sesion</title>
     <link rel="stylesheet" href="styleinicio.css">
-    <link rel="styleinicio" href="img/dfghj.png" type="iniciosesion">
 </head>
 <body>
     
@@ -15,24 +15,21 @@
         <div class="info">
             <p class="txt-1" > Gracias por visitarnos</p>
 
-            <h2> bienvenido de nuevo </h2>
+            <h2>Bienvenido de nuevo </h2>
 
-            <hr />
+            <hr/>
 
-            <p class="txt-2">
-                Si no tienes cuenta en Jamback, ingresa en crear cuenta para iniciar secion</p>
+            <p class="txt-21">Si no tienes cuenta en Jamback, ingresa en crear cuenta para iniciar sesion</p>
 
         </div>
 
         <form class="form">
-            <h2>iniciar sesion </h2>
-            <p>vienvedido a Jamback.store 
-                si no tienes cuenta haz click en crear cuenta para poder iniciar secion
-
-            </p>
+            <h2>Iniciar sesion </h2>
+            <p class="holaa">Bienvedido a Jamback.store 
+                si no tienes cuenta haz click en crear cuenta para poder iniciar sesion</p>
             <div class="inputs">
                 <input type="email" class="box" placeholder="Ingresa tu correo">
-                <input type="password" class="box" placeholder="ingrese su contraseÃ±a">
+                <input type="password" class="box" placeholder="ingrese su contraseña">
 
                 <a href="#">Olvidate tu contraseña?</a>
 
