--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
             <a href="#about">Mejor Oferta</a>
             <a href="#products">Productos</a>
             <a href="#review">Contacto</a>
-            <a href="file:///media/fuse/crostini_dd92e6a671a5c6f78220ae3b2a3b1b6e9a091e0f_termina_penguin/jamback.store/iniciosesion.html">iniciar sesion</a>
+            <a href="iniciosesion.html">iniciar sesion</a>
         
             <div class="centrar"> 
                 <div class="entrada_cont">
